# Spare-Time

./: Coloring buk.py  README.md  imaginary_sqares.py  lines3d.py  reaction time graph.py  scatterphy (copy).py  scatterphy.py  sun heated forge  titled (copy).ipynb  zaporedje.ipynb
.ipynb_checkpoints/: Viscos flow.py  scatterphy-checkpoint.py  titled (copy)-checkpoint.ipynb  titled-checkpoint.ipynb  zaporedje-checkpoint.ipynb
GOL background/: CMakeLists.txt  GOL_background  main.cpp
circl sine/: Circle sine.py
crossword/: CMakeLists.txt  main.cpp
kazalcni diagram/: lines3d.py
oscilator/: CMakeLists.txt  data.txt  drawer.py  main  main.cpp  sus.txt
